Get website ready for lunch lecture, and fix some colors and overlapping text.

--- a/public_html/assets/scss/layout/_header.scss
+++ b/public_html/assets/scss/layout/_header.scss
@@ -2,11 +2,11 @@
     position: relative;
     height: 100vh;
     min-height: 600px;
-    background-image: url(../imgs/header.JPG);
+    background-image: url(../../imgs/header.JPG);
     background-size: cover;
     background-position: center;
     @include flex;
-    flex-direction: column; 
+    flex-direction: column;
 
     .overlay {
         position: absolute;
@@ -27,7 +27,7 @@
         align-items: center;
         margin-top: 100px;
 
-        .carousel-inner {           
+        .carousel-inner {
 
             .carousel-title {
                 font-size: calc(40px + (60 - 40) * ((100vw - 300px) / (1300 - 300)));
@@ -99,7 +99,7 @@
             margin-top: 20px;
         }
     }
-        
+
 }
 @include media-breakpoint-down(sm) {
 
